ran the rewriteRun command