@@ -42,7 +42,7 @@ public class KeyPatternPropertiesViewModel implements PropertiesTabViewModel {
         patternListProperty.forEach(item -> {
             String patternString = item.getPattern();
             if (!"default".equals(item.getEntryType().getName())) {
-                if (!patternString.trim().isEmpty()) {
+                if (!patternString.isBlank()) {
                     newKeyPattern.addCitationKeyPattern(item.getEntryType(), patternString);
                 }
             }
